--- a/style.css
+++ b/style.css
@@ -103,3 +103,12 @@ a {
 	font-size: 12px;
 	color: #ffffff;
 }
+
+/*404*/
+.error-dump {
+	position:fixed;
+	text-align: center;
+	top:25%;
+	bottom:50%;
+	width:100%;
+}
