--- a/style.css
+++ b/style.css
@@ -103,8 +103,9 @@ a {
 /*FOOTER*/
 .footer {
 	background-color: #23676A;
-	padding-top: 1px;
-	padding-bottom: 1px;
+	margin-top: 0px;
+	padding-top: 0px;
+	padding-bottom: 8px;
 	text-align: center;
 	position:fixed;
 	bottom:0;
@@ -113,6 +114,11 @@ a {
 .footer p {
 	font-size: 12px;
 	color: #ffffff;
+	margin-top: 6px;
+	margin-bottom: 0px;
+}
+.footer small {
+	font-size: 10px;
 }
 
 /*404*/
