--- a/style.css
+++ b/style.css
@@ -105,21 +105,23 @@ a {
 	background-color: #23676A;
 	margin-top: 0px;
 	padding-top: 0px;
-	padding-bottom: 8px;
+	padding-bottom: 6px;
 	text-align: center;
 	position:fixed;
 	bottom:0;
 	width:100%;
+	font-size: 9px;
+	height: 40px;
 }
 .footer p {
-	font-size: 12px;
 	color: #ffffff;
 	margin-top: 6px;
-	margin-bottom: 0px;
+	margin-bottom: 1px;
 }
+/*
 .footer small {
-	font-size: 10px;
-}
+	font-size: 9px;
+}*/
 
 /*404*/
 .error-dump {
